Fixed issue where background doesn't stretch all the way

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,7 @@
     background-size: 8px 8px;
     background-repeat: repeat;
     z-index: -1;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
